syntax = "proto3";

package globe_runtime;

enum MessageType {
  VALUE = 0;
  ERROR = 1;
  STREAM_START = 2;
  STREAM_END = 3;
}

message DartMessage {
  MessageType type = 1;
  bytes data = 2;
}
