syntax = "proto3";

package globe.runtime;

/**
 * A generic JSON-like payload transmitted as MessagePack-encoded bytes.
 * The actual data structure is unpacked by the runtime using MessagePack.
 */
message JsonPayload {
  bytes data = 1;// MessagePack-encoded content
}

message DartMessage {
  bool done = 1;

  // Using `oneof` to make `data` and `error` nullable
  oneof payload {
    bytes data = 2;
    string error = 3;
  }
}

// Message structure for sending data to Dart
message SendValueRequest {
  int32 callback_id = 1;
  DartMessage message = 2;
}

// Response message (boolean success indicator)
message RpcResponse {
  bool success = 1;
}

// Service definition for RPC
service DartJSService {
  // Send a single message to Dart
  rpc SendValue(SendValueRequest) returns (RpcResponse);
}